# sqlmodel_tutorial

./: .gitignore  1_app.py  2_app.py  3_app.py  5_app.py  app.py  pyproject.toml
fastapi_project/: main.py  pyproject.toml
project2/: team_model.py
